--- a/src/components/navBarComponents/BotonNavbar.css
+++ b/src/components/navBarComponents/BotonNavbar.css
@@ -1,5 +1,5 @@
 .navbarCentro .botonNavbar{
-    background-color: #3085d6;
+    background-color: #4231df;
     border: var(--bs-btn-border-width) solid #f8f9fa;
     border-radius: 25px;
     padding: 10px 25px 10px 25px;
